script to populate User and Location tables

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "3ac44d63",
    "metadata": {},
    "outputs": [],
@@ -31,21 +31,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "12dd86ec",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# parameters\n",
+    "\n",
     "aws_access_key_id = 'AKIA3QZZ6P4BPCBXCTF4'\n",
     "aws_access_key = '7n5i0ECZfJJ8fhk6z+9O3yw1Whe28DSp8JQrfqgo'\n",
     "aws_region_name = 'us-east-1'\n",
     "\n",
+    "user_table_name = 'User'\n",
     "location_table_name = 'Location'\n",
     "estimation_table_name = 'Estimation'\n",
     "report_table_name = 'Report'\n",
     "\n",
     "dummy_location_path = 'dummies/location.csv'\n",
-    "dummy_estimation_path = 'dummies/estimation.csv'"
+    "dummy_estimation_path = 'dummies/estimation.csv'\n",
+    "\n",
+    "# helpers\n",
+    "\n",
+    "def wait_until_not_exist(client, table_name):\n",
+    "    client.get_waiter('table_not_exists').wait(\n",
+    "        TableName=table_name,\n",
+    "        WaiterConfig={\n",
+    "            'Delay': 3,\n",
+    "            'MaxAttempts': 20\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "def wait_until_exist(client, table_name):\n",
+    "    client.get_waiter('table_exists').wait(\n",
+    "        TableName=table_name,\n",
+    "        WaiterConfig={\n",
+    "            'Delay': 3,\n",
+    "            'MaxAttempts': 20\n",
+    "        }\n",
+    "    )"
    ]
   },
   {
@@ -58,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "7bdb8848",
    "metadata": {},
    "outputs": [],
@@ -67,11 +90,41 @@
     "                          aws_access_key_id=aws_access_key_id,\n",
     "                          aws_secret_access_key=aws_access_key)\n",
     "\n",
+    "# create User table\n",
+    "\n",
+    "try:\n",
+    "    client.delete_table(TableName=user_table_name)\n",
+    "    wait_until_not_exist(client, user_table_name)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "user_table = client.create_table(\n",
+    "        TableName=user_table_name,\n",
+    "        KeySchema=[\n",
+    "            {\n",
+    "                'AttributeName': 'Email',\n",
+    "                'KeyType': 'HASH'\n",
+    "            }\n",
+    "        ],\n",
+    "        AttributeDefinitions=[\n",
+    "            {\n",
+    "                'AttributeName': 'Email',\n",
+    "                'AttributeType': 'S'\n",
+    "            }\n",
+    "        ],\n",
+    "        ProvisionedThroughput={\n",
+    "            'ReadCapacityUnits': 5,\n",
+    "            'WriteCapacityUnits': 5\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "wait_until_exist(client, user_table_name)\n",
+    "\n",
     "# create Location table\n",
     "\n",
     "try:\n",
-    "    dynamodb.Table(location_table_name).delete()\n",
-    "    dynamodb.Table(location_table_name).wait_until_not_exists()\n",
+    "    client.delete_table(TableName=location_table_name)\n",
+    "    wait_until_not_exist(client, location_table_name)\n",
     "except:\n",
     "    pass\n",
     "\n",
@@ -95,6 +148,8 @@
     "        }\n",
     "    )\n",
     "\n",
+    "wait_until_exist(client, location_table_name)\n",
+    "\n",
     "# TODO: create Estimation table\n",
     "\n",
     "# TODO: craete Report table"
@@ -102,40 +157,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c44fad1e",
+   "id": "a51c95ef",
    "metadata": {},
    "source": [
-    "### 1.2. Fill Location Table with dummy locations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "6958b309",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1', 'West Village Starbucks', '33.7804494335901', '-84.4049251642794']\n",
-      "['2', 'Library Printing Station', '33.774241092779', '-84.3951471683685']\n",
-      "['3', 'North Ave Dining Hall', '33.7710653643324', '-84.3915450543985']\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open('dummies/location.csv', 'r') as file:\n",
-    "    reader = csv.reader(file)\n",
-    "    header = reader.__next__()\n",
-    "    for row in reader:\n",
-    "        print(row)"
+    "### 1.2. Populate User table with dummy data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c49c6840",
+   "id": "7942b9d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('dummies/user.csv', 'r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    header = reader.__next__()\n",
+    "    for row in reader:\n",
+    "        item = {}\n",
+    "        for i in range(len(header)):\n",
+    "            item[header[i]] = {'S': row[i]}\n",
+    "        client.put_item(TableName=user_table_name, Item=item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c44fad1e",
+   "metadata": {},
+   "source": [
+    "### 1.3. Populate Location table with dummy data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6958b309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('dummies/location.csv', 'r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    header = reader.__next__()\n",
+    "    for row in reader:\n",
+    "        item = {}\n",
+    "        for i in range(len(header)):\n",
+    "            attr_type = 'S'\n",
+    "            if header[i] in set(['ID', 'Latitude', 'Longitude']):\n",
+    "                attr_type = 'N'\n",
+    "            item[header[i]] = {attr_type: row[i]}\n",
+    "        client.put_item(TableName=location_table_name, Item=item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b909a61f",
    "metadata": {},
    "outputs": [],
    "source": []
