tidy up notebook

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -7,7 +7,15 @@
    "source": [
     "# Real-time Wait Time Monitor for College Campus Services using Cloud-powered NoSQL Database\n",
     "\n",
-    "## CS 4440 Final Project Demo from Team # 3: Jie Lyu & Junyan Mao"
+    "## Team # 3: Jie Lyu & Junyan Mao"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "516ff479",
+   "metadata": {},
+   "source": [
+    "# 1. Imports & Parameters"
    ]
   },
   {
@@ -18,7 +26,29 @@
    "outputs": [],
    "source": [
     "import boto3\n",
-    "import csv"
+    "import csv\n",
+    "import time\n",
+    "import datetime\n",
+    "import random\n",
+    "\n",
+    "aws_access_key_id = 'AKIA3QZZ6P4BPCBXCTF4'\n",
+    "aws_access_key = '7n5i0ECZfJJ8fhk6z+9O3yw1Whe28DSp8JQrfqgo'\n",
+    "aws_region_name = 'us-east-1'\n",
+    "\n",
+    "client = boto3.client('dynamodb', region_name=aws_region_name,\n",
+    "                          aws_access_key_id=aws_access_key_id,\n",
+    "                          aws_secret_access_key=aws_access_key)\n",
+    "\n",
+    "user_table_name = 'User'\n",
+    "location_table_name = 'Location'\n",
+    "estimation_table_name = 'Estimation'\n",
+    "\n",
+    "dummy_user_path = 'dummies/user.csv'\n",
+    "dummy_location_path = 'dummies/location.csv'\n",
+    "dummy_estimation_path = 'dummies/estimation.csv'\n",
+    "\n",
+    "estimation_max_delta = 50\n",
+    "random.seed(10)"
    ]
   },
   {
@@ -26,7 +56,7 @@
    "id": "a60103ec",
    "metadata": {},
    "source": [
-    "## 1. Prepare"
+    "# 2. Helpers"
    ]
   },
   {
@@ -36,22 +66,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parameters\n",
-    "\n",
-    "aws_access_key_id = 'AKIA3QZZ6P4BPCBXCTF4'\n",
-    "aws_access_key = '7n5i0ECZfJJ8fhk6z+9O3yw1Whe28DSp8JQrfqgo'\n",
-    "aws_region_name = 'us-east-1'\n",
-    "\n",
-    "user_table_name = 'User'\n",
-    "location_table_name = 'Location'\n",
-    "estimation_table_name = 'Estimation'\n",
-    "report_table_name = 'Report'\n",
-    "\n",
-    "dummy_location_path = 'dummies/location.csv'\n",
-    "dummy_estimation_path = 'dummies/estimation.csv'\n",
-    "\n",
-    "# helpers\n",
-    "\n",
     "def wait_until_not_exist(client, table_name):\n",
     "    client.get_waiter('table_not_exists').wait(\n",
     "        TableName=table_name,\n",
@@ -68,30 +82,54 @@
     "            'Delay': 3,\n",
     "            'MaxAttempts': 20\n",
     "        }\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "def modify_time():\n",
+    "    now_unix = time.time()\n",
+    "    modified_datetime = datetime.datetime.fromtimestamp(now) - datetime.timedelta(minutes=random.randrange(50))\n",
+    "    modified_unix = int(modified_datetime.timestamp())\n",
+    "    return modified_unix"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "90b86129",
+   "id": "9c0321dd",
    "metadata": {},
    "source": [
-    "### 1.1. Create tables in DynamoDB"
+    "# 3. Prepare\n",
+    "\n",
+    "In this section, we will initialize and populate all the tables. For this demo, we will use synthetic data because\n",
+    "\n",
+    "1. Save time from the cumbersome manual data input\n",
+    "2. Ensure that the data input is consistent between each test\n",
+    "3. Able to adjust the frequency to test out scalability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b52d1a5b",
+   "metadata": {},
+   "source": [
+    "## 3.1. User table\n",
+    "\n",
+    "User table has email as its primary key. It contain an encrypted password for each row. Additionally it will contain first and last names if provided in registration. This table serve the registration and login functionality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd71c99c",
+   "metadata": {},
+   "source": [
+    "### 3.1.1. Create User table"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bdb8848",
+   "id": "3076e907",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = boto3.client('dynamodb', region_name=aws_region_name,\n",
-    "                          aws_access_key_id=aws_access_key_id,\n",
-    "                          aws_secret_access_key=aws_access_key)\n",
-    "\n",
-    "# create User table\n",
-    "\n",
     "try:\n",
     "    client.delete_table(TableName=user_table_name)\n",
     "    wait_until_not_exist(client, user_table_name)\n",
@@ -118,10 +156,59 @@
     "        }\n",
     "    )\n",
     "\n",
-    "wait_until_exist(client, user_table_name)\n",
+    "wait_until_exist(client, user_table_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a51c95ef",
+   "metadata": {},
+   "source": [
+    "### 3.1.2. Populate User table with dummy data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07a8126e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(dummy_user_path, 'r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    header = reader.__next__()\n",
+    "    for row in reader:\n",
+    "        item = {}\n",
+    "        for i in range(len(header)):\n",
+    "            item[header[i]] = {'S': row[i]}\n",
+    "        client.put_item(TableName=user_table_name, Item=item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c177e7c",
+   "metadata": {},
+   "source": [
+    "## 3.2. Location Table\n",
     "\n",
-    "# create Location table\n",
-    "\n",
+    "Location table is blablabla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bafd6cc",
+   "metadata": {},
+   "source": [
+    "### 3.2.1. Create Location table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bdb8848",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "try:\n",
     "    client.delete_table(TableName=location_table_name)\n",
     "    wait_until_not_exist(client, location_table_name)\n",
@@ -148,36 +235,7 @@
     "        }\n",
     "    )\n",
     "\n",
-    "wait_until_exist(client, location_table_name)\n",
-    "\n",
-    "# TODO: create Estimation table\n",
-    "\n",
-    "# TODO: craete Report table"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a51c95ef",
-   "metadata": {},
-   "source": [
-    "### 1.2. Populate User table with dummy data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7942b9d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('dummies/user.csv', 'r') as file:\n",
-    "    reader = csv.reader(file)\n",
-    "    header = reader.__next__()\n",
-    "    for row in reader:\n",
-    "        item = {}\n",
-    "        for i in range(len(header)):\n",
-    "            item[header[i]] = {'S': row[i]}\n",
-    "        client.put_item(TableName=user_table_name, Item=item)"
+    "wait_until_exist(client, location_table_name)"
    ]
   },
   {
@@ -185,7 +243,7 @@
    "id": "c44fad1e",
    "metadata": {},
    "source": [
-    "### 1.3. Populate Location table with dummy data"
+    "### 3.2.2. Populate Location table with dummy data"
    ]
   },
   {
@@ -195,26 +253,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('dummies/location.csv', 'r') as file:\n",
+    "with open(dummy_location_path, 'r') as file:\n",
     "    reader = csv.reader(file)\n",
     "    header = reader.__next__()\n",
     "    for row in reader:\n",
     "        item = {}\n",
     "        for i in range(len(header)):\n",
-    "            attr_type = 'S'\n",
-    "            if header[i] in set(['ID', 'Latitude', 'Longitude']):\n",
-    "                attr_type = 'N'\n",
+    "            attr_type = 'N'\n",
+    "            if header[i] == 'Name':\n",
+    "                attr_type = 'S'\n",
     "            item[header[i]] = {attr_type: row[i]}\n",
     "        client.put_item(TableName=location_table_name, Item=item)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce06f6e4",
+   "metadata": {},
+   "source": [
+    "## 3.2. Estimation Table\n",
+    "\n",
+    "Estimation table is blablabla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "438cdde7",
+   "metadata": {},
+   "source": [
+    "### 3.3.1. Create Estimation table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b909a61f",
+   "id": "1c062134",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "try:\n",
+    "    client.delete_table(TableName=estimation_table_name)\n",
+    "    wait_until_not_exist(client, estimation_table_name)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "location_table = client.create_table(\n",
+    "        TableName=estimation_table_name,\n",
+    "        KeySchema=[\n",
+    "            {\n",
+    "                'AttributeName': 'ID',\n",
+    "                'KeyType': 'HASH'\n",
+    "            }\n",
+    "        ],\n",
+    "        AttributeDefinitions=[\n",
+    "            {\n",
+    "                'AttributeName': 'ID',\n",
+    "                'AttributeType': 'N'\n",
+    "            }\n",
+    "        ],\n",
+    "        ProvisionedThroughput={\n",
+    "            'ReadCapacityUnits': 5,\n",
+    "            'WriteCapacityUnits': 5\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "wait_until_exist(client, estimation_table_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66ef2c8d",
+   "metadata": {},
+   "source": [
+    "### 3.3.2. Populate Estimation table with dummy data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f7d6561",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(dummy_estimation_path, 'r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    header = reader.__next__()\n",
+    "    for row in reader:\n",
+    "        item = {}\n",
+    "        for i in range(len(header)):\n",
+    "            attr_type = 'N'\n",
+    "            if header[i] == 'User_Email':\n",
+    "                attr_type = 'S'\n",
+    "            item[header[i]] = {attr_type: row[i]}\n",
+    "        item['Time_Submitted'] = {'N': str(modify_time())}\n",
+    "        client.put_item(TableName=estimation_table_name, Item=item)"
+   ]
   }
  ],
  "metadata": {
