sort key added on Estimation table

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "## 3.1. User table\n",
     "\n",
-    "User table has email as its primary key. It contain an encrypted password for each row. Additionally it will contain first and last names if provided in registration. This table serve the registration and login functionality."
+    "User table has email as its primary key. Each row will contain an encrypted password, and additionally first and last names if provided in registration. This table serve the registration and login functionality."
    ]
   },
   {
@@ -191,7 +191,7 @@
    "source": [
     "## 3.2. Location Table\n",
     "\n",
-    "Location table is blablabla"
+    "Location table stores all the service locations on campus that we want to monitor. Each location is given an ID as its primary key, and contains the name, latitude and longitude for that location. Ideally, locations can be added by administrators one by one at any time throught our mobile app. For this demo, we are populating all the locations at once. "
    ]
   },
   {
@@ -273,7 +273,9 @@
    "source": [
     "## 3.2. Estimation Table\n",
     "\n",
-    "Estimation table is blablabla"
+    "Estimation table stores the waittime estimations users submit for a given location. Each estimation record contains the email of the user, the ID of the location, the estimated waittime and the time the estimation was submitted.\n",
+    "\n",
+    "This table will be heavily written, whenever a user submits a waittime estimation. Thus, we gave it double the write capacity units. Even though it will not be frequently read, an unoptimized read query can still cause stress. Thus, we added a sort key to the Time_Submitted attribute because read queries to this table will likely contain conditionals on that attribute. "
    ]
   },
   {
@@ -303,6 +305,10 @@
     "            {\n",
     "                'AttributeName': 'ID',\n",
     "                'KeyType': 'HASH'\n",
+    "            },\n",
+    "            {\n",
+    "                'AttributeName': 'Time_Submitted',\n",
+    "                'KeyType': 'RANGE'  \n",
     "            }\n",
     "        ],\n",
     "        AttributeDefinitions=[\n",
@@ -313,7 +319,7 @@
     "        ],\n",
     "        ProvisionedThroughput={\n",
     "            'ReadCapacityUnits': 5,\n",
-    "            'WriteCapacityUnits': 5\n",
+    "            'WriteCapacityUnits': 10\n",
     "        }\n",
     "    )\n",
     "\n",
