add script to create Report table

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -42,6 +42,7 @@
     "user_table_name = 'User'\n",
     "location_table_name = 'Location'\n",
     "estimation_table_name = 'Estimation'\n",
+    "report_table_name = 'Report'\n",
     "\n",
     "dummy_user_path = 'dummies/user.csv'\n",
     "dummy_location_path = 'dummies/location.csv'\n",
@@ -112,7 +113,13 @@
    "source": [
     "## 3.1. User table\n",
     "\n",
-    "User table has email as its primary key. Each row will contain an encrypted password, and additionally first and last names if provided in registration. This table serve the registration and login functionality."
+    "### Design\n",
+    "\n",
+    "User table has email as its primary key. Each user will have the password encrypted and saved, and as well as first and last names if provided in registration. This table serve the registration and login functionality.\n",
+    "\n",
+    "### Performance\n",
+    "\n",
+    "Some users will not be willing to tell us their first and last name, so a schemaless database like DynamoDB provides the flexibility. "
    ]
   },
   {
@@ -164,7 +171,7 @@
    "id": "a51c95ef",
    "metadata": {},
    "source": [
-    "### 3.1.2. Populate User table with dummy data"
+    "### 3.1.2. Populate User table with synthetic data"
    ]
   },
   {
@@ -191,7 +198,13 @@
    "source": [
     "## 3.2. Location Table\n",
     "\n",
-    "Location table stores all the service locations on campus that we want to monitor. Each location is given an ID as its primary key, and contains the name, latitude and longitude for that location. Ideally, locations can be added by administrators one by one at any time throught our mobile app. For this demo, we are populating all the locations at once. "
+    "### Design\n",
+    "\n",
+    "Location table stores all the service locations on campus that we want to monitor. Each location is given an ID as its primary key, and contains the name, latitude and longitude for that location. Ideally, locations can be added by administrators one by one at any time throught our mobile app. For this demo, we are populating all the locations at once.\n",
+    "\n",
+    "### Performance\n",
+    "\n",
+    "Because there should be less than 100 locations on campus and their information is unlikely to need to be updated often, this table is barely written. On the other hand, it will be read whenever a user views the wait time of a location, so we limit its write capacity unit to save cost."
    ]
   },
   {
@@ -231,7 +244,7 @@
     "        ],\n",
     "        ProvisionedThroughput={\n",
     "            'ReadCapacityUnits': 5,\n",
-    "            'WriteCapacityUnits': 5\n",
+    "            'WriteCapacityUnits': 2\n",
     "        }\n",
     "    )\n",
     "\n",
@@ -243,7 +256,7 @@
    "id": "c44fad1e",
    "metadata": {},
    "source": [
-    "### 3.2.2. Populate Location table with dummy data"
+    "### 3.2.2. Populate Location table with synthetic data"
    ]
   },
   {
@@ -271,11 +284,15 @@
    "id": "ce06f6e4",
    "metadata": {},
    "source": [
-    "## 3.2. Estimation Table\n",
+    "## 3.3. Estimation Table\n",
     "\n",
-    "Estimation table stores the waittime estimations users submit for a given location. Each estimation record contains the email of the user, the ID of the location, the estimated waittime and the time the estimation was submitted.\n",
+    "### Design\n",
     "\n",
-    "This table will be heavily written, whenever a user submits a waittime estimation. Thus, we gave it double the write capacity units. Even though it will not be frequently read, an unoptimized read query can still cause stress. Thus, we added a sort key to the Time_Submitted attribute because read queries to this table will likely contain conditionals on that attribute. "
+    "Estimation table stores the wait time estimations users submit for a given location. Each estimation record contains the user email, the location ID, the estimated wait time and the time the estimation was submitted.\n",
+    "\n",
+    "### Performance\n",
+    "\n",
+    "Even though this table will not be frequently read, an unoptimized read query can still cause stress. Thus, we added a sort key to the Time_Submitted attribute because read queries to this table will likely contain conditionals on that attribute. By adding a sort key, we avoid scanning the whole table for each read query."
    ]
   },
   {
@@ -303,7 +320,7 @@
     "        TableName=estimation_table_name,\n",
     "        KeySchema=[\n",
     "            {\n",
-    "                'AttributeName': 'ID',\n",
+    "                'AttributeName': 'Est_ID',\n",
     "                'KeyType': 'HASH'\n",
     "            },\n",
     "            {\n",
@@ -313,13 +330,17 @@
     "        ],\n",
     "        AttributeDefinitions=[\n",
     "            {\n",
-    "                'AttributeName': 'ID',\n",
+    "                'AttributeName': 'Est_ID',\n",
+    "                'AttributeType': 'N'\n",
+    "            },\n",
+    "            {\n",
+    "                'AttributeName': 'Time_Submitted',\n",
     "                'AttributeType': 'N'\n",
     "            }\n",
     "        ],\n",
     "        ProvisionedThroughput={\n",
     "            'ReadCapacityUnits': 5,\n",
-    "            'WriteCapacityUnits': 10\n",
+    "            'WriteCapacityUnits': 5\n",
     "        }\n",
     "    )\n",
     "\n",
@@ -331,7 +352,7 @@
    "id": "66ef2c8d",
    "metadata": {},
    "source": [
-    "### 3.3.2. Populate Estimation table with dummy data"
+    "### 3.3.2. Populate Estimation table with synthetic data"
    ]
   },
   {
@@ -353,6 +374,66 @@
     "            item[header[i]] = {attr_type: row[i]}\n",
     "        item['Time_Submitted'] = {'N': str(modify_time())}\n",
     "        client.put_item(TableName=estimation_table_name, Item=item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6864d72",
+   "metadata": {},
+   "source": [
+    "## 3.4. Report Table\n",
+    "\n",
+    "### Design\n",
+    "\n",
+    "Report table is where the wait time report will be saved by a cron job which is scheduled to run hourly. Each report consists of a location ID, and a two-tuple of aggregasted wait time and last updated time for each of the 24 hours.\n",
+    "\n",
+    "### Performance\n",
+    "\n",
+    "Thought this will only be written once per hour, it will be heavily read, whenever a user want to check the wait time estimation at a location. Thus, we gave it more read capacity units."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9385a7f",
+   "metadata": {},
+   "source": [
+    "### 3.4.1. Create Report Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90db441f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    client.delete_table(TableName=report_table_name)\n",
+    "    wait_until_not_exist(client, report_table_name)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "location_table = client.create_table(\n",
+    "        TableName=report_table_name,\n",
+    "        KeySchema=[\n",
+    "            {\n",
+    "                'AttributeName': 'Location_ID',\n",
+    "                'KeyType': 'HASH'\n",
+    "            }\n",
+    "        ],\n",
+    "        AttributeDefinitions=[\n",
+    "            {\n",
+    "                'AttributeName': 'Location_ID',\n",
+    "                'AttributeType': 'N'\n",
+    "            }\n",
+    "        ],\n",
+    "        ProvisionedThroughput={\n",
+    "            'ReadCapacityUnits': 8,\n",
+    "            'WriteCapacityUnits': 5\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "wait_until_exist(client, report_table_name)"
    ]
   }
  ],
