add real time wait time writes to notebook comments

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -204,7 +204,7 @@
     "\n",
     "### Performance\n",
     "\n",
-    "Because there should be less than 100 locations on campus and their information is unlikely to need to be updated often, this table is barely written. On the other hand, it will be read whenever a user views the wait time of a location, so we limit its write capacity unit to save cost."
+    "Because there are less than 100 locations on campus and their information is unlikely to need to be updated often, and the real time wait time status is only written to this table once every 5 minutes, this table is barely written. On the other hand, it will be read whenever a user views the wait time of a location, so we limit its write capacity unit to save cost."
    ]
   },
   {
@@ -232,19 +232,19 @@
     "        TableName=location_table_name,\n",
     "        KeySchema=[\n",
     "            {\n",
-    "                'AttributeName': 'ID',\n",
+    "                'AttributeName': 'Location_ID',\n",
     "                'KeyType': 'HASH'\n",
     "            }\n",
     "        ],\n",
     "        AttributeDefinitions=[\n",
     "            {\n",
-    "                'AttributeName': 'ID',\n",
+    "                'AttributeName': 'Location_ID',\n",
     "                'AttributeType': 'N'\n",
     "            }\n",
     "        ],\n",
     "        ProvisionedThroughput={\n",
     "            'ReadCapacityUnits': 5,\n",
-    "            'WriteCapacityUnits': 2\n",
+    "            'WriteCapacityUnits': 3\n",
     "        }\n",
     "    )\n",
     "\n",
