work on notebook

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -87,8 +87,8 @@
     "\n",
     "def modify_time():\n",
     "    now_unix = time.time()\n",
-    "    modified_datetime = datetime.datetime.fromtimestamp(now) - datetime.timedelta(minutes=random.randrange(50))\n",
-    "    modified_unix = int(modified_datetime.timestamp())\n",
+    "    modified_datetime = datetime.datetime.fromtimestamp(now_unix) - datetime.timedelta(minutes=random.randrange(50))\n",
+    "    modified_unix = modified_datetime.timestamp()\n",
     "    return modified_unix"
    ]
   },
@@ -286,13 +286,15 @@
    "source": [
     "## 3.3. Estimation Table\n",
     "\n",
-    "### Design\n",
+    "### Purpose\n",
     "\n",
     "Estimation table stores the wait time estimations users submit for a given location. Each estimation record contains the user email, the location ID, the estimated wait time and the time the estimation was submitted.\n",
     "\n",
-    "### Performance\n",
+    "### Design\n",
     "\n",
-    "Even though this table will not be frequently read, an unoptimized read query can still cause stress. Thus, we added a sort key to the Time_Submitted attribute because read queries to this table will likely contain conditionals on that attribute. By adding a sort key, we avoid scanning the whole table for each read query."
+    "The partition key is set on Location_ID. Such a partition key does roughly ensure uniform activity across all logical partition keys. Thus, we do not need to create another ID that lead to a waste of space.\n",
+    "\n",
+    "A sort key is set on Time_Submitted. Even though this table will not be frequently read, an suboptimal read query can still cause stress. Thus, we added a sort key to the Time_Submitted attribute because read queries to this table will likely contain conditionals on that attribute. By adding a sort key, we avoid scanning the whole table for each read query. The composite primary key of Location_ID and Time_Submitted guarantees the uniqueness because Time_Submitted has the granularity of 1 microsecond "
    ]
   },
   {
@@ -320,7 +322,7 @@
     "        TableName=estimation_table_name,\n",
     "        KeySchema=[\n",
     "            {\n",
-    "                'AttributeName': 'Est_ID',\n",
+    "                'AttributeName': 'Location_ID',\n",
     "                'KeyType': 'HASH'\n",
     "            },\n",
     "            {\n",
@@ -330,7 +332,7 @@
     "        ],\n",
     "        AttributeDefinitions=[\n",
     "            {\n",
-    "                'AttributeName': 'Est_ID',\n",
+    "                'AttributeName': 'Location_ID',\n",
     "                'AttributeType': 'N'\n",
     "            },\n",
     "            {\n",
