--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -261,7 +261,7 @@
     "\n",
     "### Performance\n",
     "\n",
-    "Because there are less than 100 locations on campus and their information is unlikely to need to be updated often, and the real time wait time status is only written to this table once every 5 minutes, this table is barely written. On the other hand, it will be read whenever a user views the wait time of a location, so we limit its write capacity unit to save cost."
+    "Because there are less than 100 locations on campus and their information is unlikely to need to be updated often, and the real time wait time status and aggregated report is only written to this table once every 5 minutes and every hour, the write pressure on the table is not much. On the other hand, it will be read whenever a user views the wait time of a location, so we only raise the read capacity not the write."
    ]
   },
   {
@@ -300,8 +300,8 @@
     "            }\n",
     "        ],\n",
     "        ProvisionedThroughput={\n",
-    "            'ReadCapacityUnits': 5,\n",
-    "            'WriteCapacityUnits': 3\n",
+    "            'ReadCapacityUnits': 8,\n",
+    "            'WriteCapacityUnits': 5\n",
     "        }\n",
     "    )\n",
     "\n",
