update lambda scripts

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -257,7 +257,7 @@
     "\n",
     "Location table stores all the service locations on campus that we want to monitor. Each location is given an ID as its primary key, and contains the name, latitude and longitude for that location. Ideally, locations can be added by administrators one by one at any time throught our mobile app. For this demo, we are populating all the locations at once.\n",
     "\n",
-    "Each location also contains Wait_Time and Aggregated_Report attributes. Wait_Time represents the real time wait time status, which is computed and updated by a cron job using AWS Lambda every 5 minutes. Aggregated_Report represents an hourly wait time report represented by a list of 24 aggregated wait time, which is computed and updated by another cron job on AWS Lambda every hour.\n",
+    "Each location also contains Wait_Time and Aggregated_Report attributes. Wait_Time represents the real time wait time status, which is computed and updated by a cron job using AWS Lambda every 5 minutes. Aggregated_Report represents an hourly wait time report represented by a list of 24 numbers each corresponding to the aggregated wait time of the correspinding hour in a day in UTC time, which is computed and updated by another cron job on AWS Lambda every hour.\n",
     "\n",
     "### Performance\n",
     "\n",
