minor change in User table attribute name

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -202,13 +202,13 @@
     "        TableName=user_table_name,\n",
     "        KeySchema=[\n",
     "            {\n",
-    "                'AttributeName': 'Email',\n",
+    "                'AttributeName': 'User_Email',\n",
     "                'KeyType': 'HASH'\n",
     "            }\n",
     "        ],\n",
     "        AttributeDefinitions=[\n",
     "            {\n",
-    "                'AttributeName': 'Email',\n",
+    "                'AttributeName': 'User_Email',\n",
     "                'AttributeType': 'S'\n",
     "            }\n",
     "        ],\n",
